k8s/consumer-deployment.yaml
# consumer-deployment.yaml: Triển khai Kafka Consumer để tiêu thụ dữ liệu từ Redpanda và phát hiện Data Drift với Evidently
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mlops-nids-consumer
  annotations:
    description: "Kafka Consumer to process network traffic data in batches and store predictions"
  labels:
    app: mlops-nids-consumer
spec:
  # Consumer chỉ cần 1 replica (dùng kafka group consumer) là đủ để dọn dẹp
  replicas: 1
  selector:
    matchLabels:
      app: mlops-nids-consumer
  template:
    metadata:
      labels:
        app: mlops-nids-consumer
    spec:
      nodeSelector:
        workload-type: worker
      containers:
        - name: consumer
          # Xài image của API (thư viện confluent-kafka nằm chung)
          image: tnvhoang/mlops-nids-api:latest
          imagePullPolicy: Always
          command: ["python", "src/consumer.py"]
          # Cấu hình biến môi trường cho Consumer
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: 500m
              memory: 512Mi
